<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void {
    Schema::create('appointments', function (Blueprint $table) {
        $table->id();
        $table->dateTime('date_time');
        $table->string('status'); // confirm(), cancel() logic updates this
        $table->foreignId('buyer_id')->constrained('users');
        $table->foreignId('agent_id')->constrained('users');
        $table->foreignId('calendar_id')->constrained()->onDelete('cascade');
        $table->timestamps();
    });
}

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('appointments');
    }
};
