classDiagram

%% ==================================================
%% BASE USER CLASS
%% ==================================================

class User {
    +String userId
    +String email
    +String password
    +login()
    +logout()
    +receivePushNotification()
}

%% ==================================================
%% USER ROLES (SUBCLASSES)
%% ==================================================

class Admin {
    +String adminId
    +createUser()
    +editUser()
    +deleteUser()
    +createProperty()
    +editProperty()
    +viewSystemLogs()
    +sendMessage()
    +viewNotifications()
}

class Agent {
    +String agentId
    +createProperty()
    +editProperty()
    +conductAppointment()
    +sendMessage()
    +viewNotifications()
}

class Buyer {
    +String buyerId
    +searchProperty()
    +addToFavorites()
    +requestAppointment()
    +sendMessage()
}

%% ==================================================
%% AUTHORIZATION (SPATIE RBAC)
%% ==================================================

class Role {
    +Long id
    +String name
    +String guard_name
    +DateTime created_at
    +DateTime updated_at
}

class Permission {
    +Long id
    +String name
    +String guard_name
    +DateTime created_at
    +DateTime updated_at
}

%% ==================================================
%% CATEGORY MANAGEMENT
%% ==================================================

class Category {
    +Long id
    +String name
    +String description
    +DateTime created_at
    +DateTime updated_at
    +createCategory()
    +editCategory()
    +deleteCategory()
}

%% ==================================================
%% PROPERTY DOMAIN
%% ==================================================

class Property {
    +String propertyId
    +Double price
    +String location
    +Long statusId
    +Long categoryId
    +String assignedTo
    +getDetails()
}

class PropertyStatus {
    +Long id
    +String name
}

class Gallery {
    +List~String~ imageUrls
    +addMedia()
    +removeMedia()
}

%% ==================================================
%% SCHEDULING & APPOINTMENTS
%% ==================================================

class Appointment {
    +DateTime dateTime
    +String status
    +String type
    +confirm()
    +cancel()
}

class Calendar {
    +List~Appointment~ events
    +sync()
}

%% ==================================================
%% COMMUNICATION
%% ==================================================

class Message {
    +String messageId
    +String content
    +DateTime timestamp
    +String senderId
    +String recipientId
    +send()
}

%% ==================================================
%% NOTIFICATIONS & AUDIT LOGS
%% ==================================================

class Notification {
    +String notificationId
    +String title
    +String content
    +DateTime timestamp
    +Boolean isRead
    +markAsRead()
}

class SystemLog {
    +String logId
    +String action
    +String actionBy
    +String description
    +DateTime timestamp
    +String entityType
    +String entityId
}

%% ==================================================
%% USER INHERITANCE
%% ==================================================

User <|-- Admin
User <|-- Agent
User <|-- Buyer

%% ==================================================
%% AUTHORIZATION (SPATIE RBAC)
%% ==================================================

User "*" --> "*" Role : has
Role "*" --> "*" Permission : contains
User "*" --> "*" Permission : has direct

%% ==================================================
%% CATEGORY & PROPERTY RELATIONSHIPS
%% ==================================================

Admin "1" --> "*" Category : manages
Property "*" --> "1" Category : belongs to
Property "*" --> "1" PropertyStatus : has
Property "1" --> "1" Gallery : contains

%% ==================================================
%% PROPERTY MANAGEMENT
%% ==================================================

Admin "1" --> "*" Property : creates/manages
Agent "1" --> "*" Property : manages
Admin "1" --> "*" Agent : assigns to properties

%% ==================================================
%% BUYER INTERACTIONS
%% ==================================================

Buyer "*" --> "*" Property : favorites
Buyer "1" --> "*" Message : sends
Buyer "1" --> "*" Appointment : requests

%% ==================================================
%% AGENT INTERACTIONS
%% ==================================================

Agent "1" --> "*" Message : sends
Agent "1" --> "*" Appointment : conducts
Agent "1" --> "1" Calendar : owns
Agent "1" --> "*" Notification : receives

%% ==================================================
%% ADMIN INTERACTIONS
%% ==================================================

Admin "1" --> "*" Message : sends
Admin "1" --> "*" Appointment : views/manages
Admin "1" --> "1" Calendar : owns
Admin "1" --> "*" Notification : receives
Admin "1" --> "*" SystemLog : views

%% ==================================================
%% SCHEDULING
%% ==================================================

Calendar "1" --> "*" Appointment : stores

%% ==================================================
%% NOTES ON ROLES
%% ==================================================
%% Roles are stored in database:
%% - Visitor: read-only property access
%% - Buyer: search, favorite, request appointments, send messages
%% - Agent: manage listings, view clients, schedule, send messages, 
%%   receive notifications
%% - Admin: manage users/roles, manage categories/properties, 
%%   manage appointments, send messages, view system logs, 
%%   receive notifications, assign agents to properties
%% ==================================================